# NOPE

./: .env  .gitignore  .gitlab-ci.yml  LICENSE  NOPE.g4  README.md  README.tpl.md  main.py  pyproject.toml  test_arr  test_c  test_c.c
.antlr/: NOPE.interp  NOPE.tokens  NOPELexer.interp  NOPELexer.java  NOPEParser.java
docs/: def.md  def.tpl.md  escape_char.md  escape_char.tpl.md  if_else.md  if_else.tpl.md  loops.md  loops.tpl.md  quick_start.md  quick_start.tpl.md  variables.md  variables.tpl.md
examples/in/: anyof.nope  anyof_fail.nope  arr_1.nope  arr_2.nope  c_header2.nope  check.nope  classic.nope  comment.nope  def.nope  def_1.nope  def_2.nope  def_3.nope  def_4.nope  def_5.nope  def_6.nope  escchar.nope  escchar2.nope  escchar3.nope  ex1.nope  ex10.txt  ex2.nope  if_1.nope  if_2.nope  if_3.nope  if_else_1.nope  if_else_2.nope  if_else_3.nope  ignore_ws.nope  range.nope  rep_1.nope  rep_2.nope  rep_3.nope  rep_4.nope  rep_5.nope  rep_6.nope  test15.in  test_anyof.nope  test_check.nope  test_def.nope  (+6 more)
examples/in.old/: test15.in
graphs/: anyof  arr_1  arr_2  c_header  c_header2  check  classic  comment  def  def_1  def_2  def_3  def_4  def_5  def_6  escchar  escchar2  escchar3  ex1  ex2  if_1  if_2  if_3  if_else_1  if_else_2  if_else_3  ignore_ws  match  range  rep_1  rep_2  rep_3  rep_4  rep_5  rep_6  test1  test10  test11  test12  test13  (+15 more)
src/: GraphRenderer.py  NOPE.interp  NOPE.tokens  NOPECompiler.py  NOPELexer.interp  NOPELexer.py  NOPELexer.tokens  NOPELinter.py  NOPEListener.py  NOPEParser.py  NOPEVisitor.py  main.py  nope_runtime.c  nope_runtime.h
(+30 files in other folders)
