[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nope"
version = "0.1.0"
description = "Notation for Output Patern Evaluation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "antlr4-python3-runtime==4.13.2",
    "antlr4-tools>=0.2.2",
    "graphviz>=0.21",
    "jinja2-cli>=1.0.1",
]

[project.scripts]
nope = "nope.main:main"